TestCases/ASTTests/SemanticErrorsTests/CreateTests/read_file_before.dot
digraph AST {
  "133177803622864" [label="Start"];
  "133177803622864" -> "133177803623152";
  "133177803623152" [label="Code"];
  "133177803623152" -> "133177803624976";
  "133177803624976" [label="Function"];
  "133177803624976" -> "133177803625504";
  "133177803624976" -> "133177803625600";
  "133177803624976" -> "133177803622576";
  "133177803625504" [label="main"];
  "133177803625600" [label="Code"];
  "133177803625600" -> "133177803626464";
  "133177803625600" -> "133177803625072";
  "133177803625600" -> "133177803627616";
  "133177803625600" -> "133177803633184";
  "133177803625600" -> "133177803622720";
  "133177803626464" [label="Declaration"];
  "133177803626464" -> "133177803630304";
  "133177803626464" -> "133177803625024";
  "133177803630304" [label="x"];
  "133177803625024" [label="4"];
  "133177803625072" [label="Declaration"];
  "133177803625072" -> "133177803629968";
  "133177803625072" -> "133177803630160";
  "133177803629968" [label="b"];
  "133177803630160" [label="9632"];
  "133177803627616" [label="Declaration"];
  "133177803627616" -> "133177803624880";
  "133177803627616" -> "133177803631744";
  "133177803624880" [label="x_ptr"];
  "133177803631744" [label="Expr"];
  "133177803631744" -> "133177803632272";
  "133177803631744" -> "133177803622048";
  "133177803632272" [label="&"];
  "133177803622048" [label="b"];
  "133177803633184" [label="Assignment"];
  "133177803633184" -> "133177803620560";
  "133177803633184" -> "133177803621520";
  "133177803620560" [label="Expr"];
  "133177803620560" -> "133177803636448";
  "133177803620560" -> "133177803621856";
  "133177803636448" [label="*"];
  "133177803621856" [label="x_ptr"];
  "133177803621520" [label="x"];
  "133177803622720" [label="Comment"];
  "133177803622720" -> "133177803620608";
  "133177803620608" [label="Invalid: const assignment"];
  "133177803622576" [label="Return"];
}
